--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "nodemon": "^2.0.20"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "express-validator": "^6.9.2",
+    "mongoose": "^6.6.5"
   }
 }
